--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#2e8b57">
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js");
+}
 
 <style>
 
