--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ padding:20px;
 
 .container{
 max-width:420px;
+height:500px;
 margin:auto;
 }
 
@@ -67,7 +68,7 @@ gap:8px;
 }
 
 button{
-width:110px;
+width:100px;
 padding:10px;
 font-weight:bold;
 font-size:15px;
@@ -118,7 +119,7 @@ padding:2px;
 }
 
 /* kolombreedtes */
-th:nth-child(1),td:nth-child(1){width:25%;}
+th:nth-child(1),td:nth-child(1){width:30%;}
 th:nth-child(2),
 th:nth-child(3),
 th:nth-child(4),
@@ -140,8 +141,8 @@ position:fixed;
 top:40%;
 left:50%;
 transform:translate(-50%,-50%);
-background:white;
-color:black;
+background:red;
+color:White;
 padding:10px;
 border-radius:10px;
 text-align:center;
@@ -151,6 +152,24 @@ text-align:center;
 display:block;
 width:120px;
 margin:5px auto;
+}
+@media (max-width:480px){
+
+button{
+width:90px;
+padding:8px;
+font-size:14px;
+}
+
+input,.result{
+width:80px;
+font-size:18px;
+}
+
+.button-row{
+gap:5px;
+}
+
 }
 
 </style>
