--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@ font-family:Arial;
 background:#2e8b57;
 font-size:18px;
 color:white;
-padding:10px;
+padding:5px;
 }
 
 .container{
 max-width:420px;
+    height:550px;
 margin:auto;
 }
 
@@ -412,4 +413,5 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
