--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ padding:5px;
 
 .container{
 max-width:420px;
-    height:550px;
 margin:auto;
 }
 
@@ -86,7 +85,7 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
-padding-bottom:10px;
+padding-bottom:5px;
 }
 
 .table-wrapper{
@@ -292,7 +291,7 @@ th,td{
 
 <div class="table-actions">
 <button onclick="wisAlles()" class="danger-btn">
-⚠ TABEL WISSEN
+⚠ WIS ALLES
 </button>
 </div>
 
@@ -413,5 +412,6 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
