--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
+    height:500px;
 padding-bottom:5px;
 }
 
@@ -412,6 +413,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
