--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ th,td{
     padding:10px 14px;
     border-radius:8px;
     font-weight:bold;
+    width:160px;
 }
 
 </style>
@@ -413,6 +414,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
