--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
-    height:500px;
+    height:450px;
 padding-bottom:5px;
 }
 
@@ -186,6 +186,7 @@ font-size:16px;
 border-radius:10px;
 cursor:pointer;
 width:220px;
+    margin-
 }
 
 .danger-btn:hover{
@@ -232,6 +233,7 @@ th,td{
     border-radius:8px;
     font-weight:bold;
     width:160px;
+    margin-bottom:20px;
 }
 
 </style>
@@ -414,6 +416,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
