--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ padding:10px 14px;
 font-size:15px;
 border-radius:10px;
 cursor:pointer;
-width:160px;
-    margin-bottom:10px;
+width:140px;
+    margin-bottom:30px;
 }
 
 .danger-btn:hover{
@@ -337,7 +337,7 @@ laadData();
 }
 
 function wisAlles(){
-if(!confirm("Ben je zeker dat je de volledige tabel wil wissen?"))return;
+if(!confirm("Ben je zeker dat je alle opgeslagen wedstrijden wil wissen ?"))return;
 wedstrijden=[];
 bewaarData();
 laadData();
@@ -405,6 +405,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
