--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ font-size:15px;
 border-radius:10px;
 cursor:pointer;
 width:140px;
-    margin-bottom:30px;
+    margin-left:10px;
+    padding-bottom:30px;
 }
 
 .danger-btn:hover{
@@ -405,6 +406,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
