--- a/index.html
+++ b/index.html
@@ -178,16 +178,19 @@ justify-content:center;
 }
 
 .danger-btn{
+height:10px;
 background:#c62828;
 color:white;
 border:none;
-padding:10px 14px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 font-size:15px;
 border-radius:10px;
 cursor:pointer;
-width:140px;
+width:120px;
     margin-left:10px;
-    padding-bottom:30px;
+    padding-bottom:20px;
 }
 
 .danger-btn:hover{
@@ -406,6 +409,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
