--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ justify-content:center;
 }
 
 .danger-btn{
-height:12px;
+height:10px;
 background:#c62828;
 color:white;
 border:none;
@@ -188,7 +188,8 @@ justify-content:center;
 font-size:14px;
 border-radius:8px;
 cursor:pointer;
-width:110px;
+width:100px;
+margin-top:15px
 
 }
 
@@ -408,6 +409,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
