--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ justify-content:center;
 }
 
 .danger-btn{
-height:10px;
+padding:10px;
 background:#c62828;
 color:white;
 border:none;
@@ -188,8 +188,8 @@ justify-content:center;
 font-size:14px;
 border-radius:8px;
 cursor:pointer;
-width:100px;
-margin-top:15px
+width:120px;
+margin-top:20px
 
 }
 
@@ -409,6 +409,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
