--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ justify-content:center;
 
 .danger-btn{
 padding:8px;
-background:#c62828;
-color:white;
+background:black;
+color:yellow;
 border:none;
 display:flex;
 align-items:center;
@@ -189,7 +189,8 @@ font-size:14px;
 border-radius:8px;
 cursor:pointer;
 width:110px;
-margin-top:22px
+margin-top:22px;
+margin-right:10px;
 
 }
 
@@ -409,6 +410,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
