--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ justify-content:center;
 
 .danger-btn{
 padding:8px;
-background:black;
+background:solid black;
 color:yellow;
 border:none;
 display:flex;
@@ -189,8 +189,8 @@ font-size:14px;
 border-radius:8px;
 cursor:pointer;
 width:110px;
-margin-top:22px;
-margin-right:10px;
+margin-top:30px;
+padding-right:10px;
 
 }
 
@@ -410,6 +410,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
