--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ justify-content:center;
 
 .danger-btn{
 padding:8px;
-background:solid black;
+background:#28282B;
 color:yellow;
 border:none;
 display:flex;
@@ -410,6 +410,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
