--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ font-family:Arial;
 background:#2e8b57;
 font-size:18px;
 color:white;
-padding:3px;
+padding:2px;
 }
 
 .container{
@@ -85,8 +85,8 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
-    height:418px;
-padding-bottom:5px;
+height:420px;
+padding-bottom:1px;
 }
 
 .table-wrapper{
@@ -178,7 +178,7 @@ justify-content:center;
 }
 
 .danger-btn{
-padding:8px;
+padding:7px;
 background:#28282B;
 color:yellow;
 border:none;
@@ -190,7 +190,7 @@ border-radius:8px;
 cursor:pointer;
 width:110px;
 margin-top:30px;
-padding-right:10px;
+float:right;
 
 }
 
@@ -406,6 +406,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
