--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
-height:420px;
+height:430px;
 padding-bottom:1px;
 }
 
@@ -96,6 +96,7 @@ overflow-y:scroll;
 
 table{
 width:100%;
+height:420;
 border-collapse:collapse;
 color:black;
 text-align:center;
@@ -406,6 +407,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
