--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ padding-bottom:1px;
 }
 
 .table-wrapper{
-height:320px;
+height:350px;
 overflow-y:scroll;
 }
 
 table{
 width:100%;
-height:430;
+height:435;
 border-collapse:collapse;
 color:black;
 text-align:center;
@@ -190,7 +190,7 @@ font-size:14px;
 border-radius:8px;
 cursor:pointer;
 width:110px;
-margin-top:30px;
+margin-bottom:10px;
 
 }
 
@@ -406,6 +406,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
