--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@ background:white;
 border-radius:12px;
 overflow:hidden;
 margin-top:20px;
-height:430px;
+height:440px;
 padding-bottom:1px;
 }
 
 .table-wrapper{
-height:350px;
+height:330px;
 overflow-y:scroll;
 }
 
@@ -190,7 +190,7 @@ font-size:14px;
 border-radius:8px;
 cursor:pointer;
 width:110px;
-margin-bottom:10px;
+margin-top:10px;
 
 }
 
@@ -406,6 +406,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
