--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ overflow-y:scroll;
 
 table{
 width:100%;
-height:435;
+height:440;
 border-collapse:collapse;
 color:black;
 text-align:center;
@@ -190,7 +190,7 @@ font-size:14px;
 border-radius:8px;
 cursor:pointer;
 width:110px;
-margin-top:50px;
+padding-top:50px;
 
 }
 
@@ -406,6 +406,7 @@ if ("serviceWorker" in navigator) {
 
 </body>
 </html>
+
 
 
 
