--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ button{width:100px;padding:10px;font-weight:bold;font-size:15px;border:0;border-
 .wissen{background:#ff5555;}
 .opslaan{background:#ffc107;}
 .bereken{background:#e6e6c8;}
-.table-frame{background:white;border-radius:10px;height:350px;overflow:hidden;display:flex;flex-direction:column;}
+.table-frame{background:white;border-radius:10px;height:365px;overflow:hidden;display:flex;flex-direction:column;}
 .table-wrapper{flex:1;overflow-y:auto;}
 table{width:100%;border-collapse:collapse;background:white;color:black;text-align:center;table-layout:fixed;}
 /* kolombreedtes */
@@ -38,8 +38,8 @@ td:nth-child(3),
 td:nth-child(4),
 td:nth-child(5){width:16%;}
 
-th,td{border:1px solid #ccc;padding:10px;}
-thead th{position:sticky;top:0;background:#ddd;}
+th,td{border:1px solid #ccc;padding:6px;}
+thead th{position:sticky;top:0;background:#ddd;font-size:15px;}
 tbody td{font-size:14px;padding:2px;}
 .cut{cursor:pointer;font-weight:bold;color:red;}
 
